
CAUTION: The ElasticSearch server will no longer be embedded. Instead an external ElasticSearch 6.0 server can be used.

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

[[v0.14.2]]
== 0.14.2 (xx.01.2018)

icon:check[] Elasticsearch: Fixed a bug which caused an internal error when granting multiple permissions to the same element at the same time.

[[v0.14.1]]
== 0.14.1 (19.01.2018)

icon:check[] Core: Fixed a deadlock sitation which could occur when handling more than 20 image resize requests in parallel. Image resize operations will now utilize a dedicated thread pool.

icon:check[] Core: Fixed a bug which caused permission inconsistencies when deleting a group from the system.

icon:plus[] REST: Added support to automatically handle the `Expect: 100-Continue` header. We however recommend to only use this header for upload requests.
Using this header will otherwise reduce the response times of your requests. Note that PHP curl will add this header by default.
You can read more about the link:https://support.urbanairship.com/hc/en-us/articles/213492003--Expect-100-Continue-Issues-and-Risks[header here].

[[v0.14.0]]
== 0.14.0 (16.01.2018)

CAUTION: The image manipulation query parameters `cropx`, `cropy`, `croph` and `cropw` have been replaced by the `rect` parameter. The `rect` parameter contains the needed values `rect=x,y,w,h`.

CAUTION: The image manipulation query parameter `width` was renamed to `w`. The parameter `height` was renamed to `h`.

CAUTION: The binary transformation request request was updated. The crop parameters are now nested within the `cropRect` object.

CAUTION: It is now required to specify the crop mode when cropping an image. Possible crop modes are `rect` which will utilize the specified crop area or `fp` which will utilize the focal point information in order to crop the image.

icon:plus[] Image: It is now possible to specify a focal point within the binary field of an image.