@@ -1,0 +1,34 @@
+{
+	deNode: node(path:"/new-page-de") {
+		fields {
+			... on folder {
+				# [$.data.deNode.fields.stringList[0]=A Link: /api/v1/dummy/webroot/News/News%20Overview.en.html]
+				# [$.data.deNode.fields.stringList[1]=B Link: /api/v1/dummy/webroot/Neuigkeiten/News%20Overview.de.html]
+				# [$.data.deNode.fields.stringList[2]=C Link: /api/v1/dummy/webroot/Neuigkeiten/News%20Overview.de.html]
+				stringList(linkType: FULL)
+
+				# [$.data.deNode.fields.htmlList[0]=A Link: /api/v1/dummy/webroot/News/News%20Overview.en.html]
+				# [$.data.deNode.fields.htmlList[1]=B Link: /api/v1/dummy/webroot/Neuigkeiten/News%20Overview.de.html]
+				# [$.data.deNode.fields.htmlList[2]=C Link: /api/v1/dummy/webroot/Neuigkeiten/News%20Overview.de.html]
+				htmlList(linkType: FULL)
+			}
+		}
+	}
+
+	enNode: node(path:"/new-page-en") {
+        fields {
+            ... on folder {
+				# [$.data.enNode.fields.stringList[0]=A Link: /api/v1/dummy/webroot/News/News%20Overview.en.html]
+				# [$.data.enNode.fields.stringList[1]=B Link: /api/v1/dummy/webroot/Neuigkeiten/News%20Overview.de.html]
+				# [$.data.enNode.fields.stringList[2]=C Link: /api/v1/dummy/webroot/News/News%20Overview.en.html]
+                stringList(linkType: FULL)
+
+				# [$.data.enNode.fields.htmlList[0]=A Link: /api/v1/dummy/webroot/News/News%20Overview.en.html]
+				# [$.data.enNode.fields.htmlList[1]=B Link: /api/v1/dummy/webroot/Neuigkeiten/News%20Overview.de.html]
+				# [$.data.enNode.fields.htmlList[2]=C Link: /api/v1/dummy/webroot/News/News%20Overview.en.html]
+                htmlList(linkType: FULL)
+            }
+        }
+    }
+}
+# [$.errors=<is-undefined>]
