@@ -158,7 +158,7 @@ public class FieldDefinitionProvider extends AbstractTypeProvider {
 						GraphQLContext gc = env.getContext();
 						LinkType type = getLinkType(env);
 						String content = htmlField.getHTML();
-						return linkReplacer.replace(gc, null, null, content, type, gc.getProject().getName(), Arrays.asList());
+						return linkReplacer.replace(gc, null, null, content, type, gc.getProject().getName(), Arrays.asList(container.getLanguage().getLanguageTag()));
 					}
 					return null;
 				}).build();
@@ -173,7 +173,7 @@ public class FieldDefinitionProvider extends AbstractTypeProvider {
 						GraphQLContext gc = env.getContext();
 						LinkType type = getLinkType(env);
 						String content = field.getString();
-						return linkReplacer.replace(gc, null, null, content, type, gc.getProject().getName(), Arrays.asList());
+						return linkReplacer.replace(gc, null, null, content, type, gc.getProject().getName(), Arrays.asList(container.getLanguage().getLanguageTag()));
 					}
 					return null;
 				}).build();
@@ -229,7 +229,7 @@ public class FieldDefinitionProvider extends AbstractTypeProvider {
 				return htmlList.getList().stream().map(item -> {
 					String content = item.getHTML();
 					LinkType linkType = getLinkType(env);
-					return linkReplacer.replace(gc, null, null, content, linkType, gc.getProject().getName(), Arrays.asList());
+					return linkReplacer.replace(gc, null, null, content, linkType, gc.getProject().getName(), Arrays.asList(container.getLanguage().getLanguageTag()));
 				}).collect(Collectors.toList());
 			case "string":
 				StringGraphFieldList stringList = container.getStringList(schema.getName());
@@ -239,7 +239,7 @@ public class FieldDefinitionProvider extends AbstractTypeProvider {
 				return stringList.getList().stream().map(item -> {
 					String content = item.getString();
 					LinkType linkType = getLinkType(env);
-					return linkReplacer.replace(gc, null, null, content, linkType, gc.getProject().getName(), Arrays.asList());
+					return linkReplacer.replace(gc, null, null, content, linkType, gc.getProject().getName(), Arrays.asList(container.getLanguage().getLanguageTag()));
 				}).collect(Collectors.toList());
 			case "number":
 				NumberGraphFieldList numberList = container.getNumberList(schema.getName());
